pathfinder/tests/BugTracker/Tests/type_check.SF-1705898.stable.err
stderr of test 'type_check.SF-1705898` in directory 'tests/BugTracker` itself:


# 18:39:23 >  
# 18:39:23 >  Mtimeout -timeout 180 Mserver "--config=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4:/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4/lib:/ufs/manegold/_/scratch0/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/lib64/MonetDB4/bin" --set "gdk_dbfarm=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/dbfarm" --set "sql_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/sql_logs" --set "xquery_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/prefix.--enable-strict_--disable-debug_--enable-optimize/var/xquery_logs" --set mapi_port=36569 --set xrpc_port=43556 --set monet_prompt= --trace "--dbname=mTests_tests_BugTracker" --dbinit=" module(pathfinder);" ; echo ; echo Over..
# 18:39:23 >  


# 18:39:23 >  
# 18:39:23 >  Mtimeout -timeout 60 MapiClient -lxquery -oxml -umonetdb -Pmonetdb --host=localhost --port=36569 type_check.SF-1705898.xq
# 18:39:23 >  

MAPI  = monetdb@localhost:36569
QUERY = let $min :=  123.4
        
        let $max := 5678.9
        
        let $bins := 400
        
        let $grp := ($max - $min) idiv $bins
        
        return element { "result" } { $grp }
ERROR = !type error: no variant of function op:idiv accepts the given argument type(s): decimal; integer
        !type error: maybe you meant:
        !type error:   op:idiv (integer, integer) as integer
        !type error:   op:idiv (integer?, integer?) as integer?
        !type error: illegal arguments for function op:idiv
        !# halted in /ufs/manegold/_/scratch0/Monet/Testing/Current/source/pathfinder/compiler/semantics/typecheck.brg (fun_not_found), line 1334

# 18:39:23 >  
# 18:39:23 >  Done.
# 18:39:23 >  

